Fix issue where navlinks would collapse

--- a/app/assets/stylesheets/components/home_navbar.scss
+++ b/app/assets/stylesheets/components/home_navbar.scss
@@ -43,6 +43,7 @@ header {
   height: 64px;
   margin-right: 48px;
   margin-top: -1px;
+  min-width: 114px;
 
   a, button {
     color: $black;
